lib/velosiparser/tests/vrs/interface/readactions_01_missing_separator_expected.txt
error: expected `;`, found `A`
     --> tests/vrs/interface/readactions_01_missing_separator.vrs:1:23
      |
    1 |  ReadActions { A -> B  A -> B; }
      |                        ^ help: add `;` here.
